<resources>
    <string name="app_name">ILoveMarshmallow</string>
    <string name="action_settings">Settings</string>
    <string name="action_trending">Trending</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_more">More</string>
    <string name="login_string">Login</string>
    <string name="welcome_string">Login with your email id to start purchasing and sharing</string>
    <string name="share_product_string">You can share this product with your loved ones you care about</string>
    <string name="dialog_hint_msg_string">Enter a short message for your loved one</string>
    <string name="dialog_hint_email_string">Enter Email id of your friend</string>


    <string name="hint_user_email_string">Enter your email id</string>
    <string name="login_title_string">Fashion is here</string>
    <string name="share_product_title">Share with loved ones</string>
    <string name="shop_button_string">Shop Now</string>
    <string name="tap_shop_string">Tap on Shop Now</string>

    <string name="image_back">Back</string>
    <string name="search_hint_string">Search Products</string>
    <string name="voice_search">Voice Search</string>
    <string name="product_not_found">Sorry :( could not found the product you were searching</string>


    <string name="string_filler">Filler</string>
</resources>
